# digital-signature-governance-pack

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  REPOSITORY_METADATA.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.ssot/adr/: ADR-0900-cache-freshness-standards-targets-reviewed-before-inclusion.yaml
.ssot/specs/: SPEC-0900-cache-freshness-governance-target-review.yaml  SPEC-0900-digital-signature-governance-target-review.yaml
docs/governance/: pack-authoring-guide.md
docs/proposals/: digital-signature-adr-spec-proposal.md
docs/standards/: signature-and-container-standards-matrix.md
scripts/: bump_version.py  sync_packaged_docs.py
src/digital_signature_governance_pack/: __init__.py  metadata.json
src/digital_signature_governance_pack/templates/: __init__.py
src/digital_signature_governance_pack/templates/adr/: ADR-0900-digital-signature-standards-targets-reviewed-before-inclusion.yaml  manifest.json
src/digital_signature_governance_pack/templates/specs/: manifest.json
src/ssot_registry_pack_template/templates/: __init__.py
src/ssot_registry_pack_template/templates/adr/: ADR-0001-pack-governance-scope-is-explicit.yaml  manifest.json
src/ssot_registry_pack_template/templates/specs/: SPEC-0001-pack-document-contract.yaml  manifest.json
tests/: test_bump_version.py  test_templates.py
