[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-signature-governance-pack"
version = "0.1.1.dev1"
description = "Installable ADR and SPEC extension pack for digital-signature and container governance."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "Apache-2.0"
authors = [{ name = "Jacob Stewart", email = "jacob@swarmauri.com" }]
dependencies = ["tomli>=2.0.1; python_version < '3.11'"]
keywords = [
  "ssot",
  "ssot-registry",
  "extension-pack",
  "digital-signature",
  "signature",
  "pades",
  "xades",
  "cades",
  "asic",
  "timestamping",
  "validation",
  "governance",
  "adr",
  "spec",
  "uv",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/groupsum/digital-signature-governance-pack"
Repository = "https://github.com/groupsum/digital-signature-governance-pack"
Issues = "https://github.com/groupsum/digital-signature-governance-pack/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"digital_signature_governance_pack.templates.adr" = ["*.json", "*.yaml"]
"digital_signature_governance_pack.templates.specs" = ["*.json", "*.yaml"]

[dependency-groups]
dev = []
